--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,15 +8,7 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
     "skipLibCheck": true,
-    "lib": [
-      "DOM",
-      "ES6",
-      "DOM.Iterable",
-      "ScriptHost",
-      "ESNext"
-    ]
+    "lib": ["DOM", "ES6", "DOM.Iterable", "ScriptHost", "ESNext"]
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
