--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dm5",
   "version": "1.1.10",
   "description": "",
-  "author": "fym",
+  "author": "fym998",
   "license": "MIT",
   "private": true,
   "engines": {
