--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.10",
   "description": "",
   "author": "fym998",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "private": true,
   "engines": {
     "node": ">=18"
